# QtCodeLab

./: CMakeLists.txt  LICENSE  readme.md
QR_01/: QR_01.pro  mainwindow.cpp  mainwindow.h
QR_02/: QR_02.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtDisplayWindow/: CMakeLists.txt  README.md  conanfile.txt
QtTestApplication/: CMakeLists.txt  README.md
